# Macro-Thunder

./: CLAUDE.md  README.md  installer_v1.1.iss  pyproject.toml
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-03-SUMMARY.md  1-CONTEXT.md
.planning/phases/02-record-and-play/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-04-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-visual-block-editor/: .continue-here.md  03-02-PLAN.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md
.planning/phases/04-flow-control-and-window-management/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-06-PLAN.md
.planning/phases/05-record-logic-adaptation-and-fixes/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-VERIFICATION.md
.planning/phases/07-loop-blocks/: 07-01-SUMMARY.md  07-02-SUMMARY.md  07-03-SUMMARY.md  07-04-PLAN.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/macro_thunder/: __main__.py  hotkeys.py  settings.py
tests/: test_editor_ui.py  test_engine.py  test_flow_control.py  test_loop_blocks.py  test_playback_state.py  test_recorder.py  test_recorder_residue.py  test_serializer.py  test_view_model.py  test_view_model_rescale.py  test_window_utils.py
(+75 files in other folders)
