[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macro-thunder"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "PyQt6>=6.4",
    "pynput>=1.7",
]

[project.optional-dependencies]
darktheme = [
    "PyQtDarkTheme-fork>=2.3.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/macro_thunder"]

[project.scripts]
macro-thunder = "macro_thunder.__main__:main"
